replication/sutra-replication-package/sdk/sutra-compiler/tests/corpus/invalid/03_unterminated_string.su
// Expected error: AKA0002 - unterminated string literal.
// The lexer should emit the error and the parser should recover.

function string Bad() {
    return "this string never closes;
}
